--- a/index.html
+++ b/index.html
@@ -29,29 +29,29 @@
     <div class="leader">
       <h3>青年部キャプテン</h3>
       <div class="person1">
-        <p>清野 堅</p><img src="c:\Users\brave.BRAVE-HEART29\Downloads\Image.jfif" alt="">
+        <p>清野 堅</p><img src="./photo/Image.jfif" alt="">
       </div>
     </div>
 
     <div class="member">
       <h3>主要メンバー</h3>
       <div class="person2">
-        <p>三橋</p><img src=".\photo\Image (3).jfif">
+        <p>三橋</p><img src="./photo/Image (3).jfif">
       </div>
       <div class="person2">
-        <p>横山</p><img src=".\photo\Image (1).jfif">
+        <p>横山</p><img src="./photo/Image (1).jfif">
       </div>
       <div class="person2">
-        <p>渡部</p><img src=".\photo\Image (2).jfif">
+        <p>渡部</p><img src="./photo/Image (2).jfif">
       </div>
       <div class="person2">
-        <p>國府田</p><img src=".\photo\Image (7).jfif">
+        <p>國府田</p><img src="./photo/Image (7).jfif">
       </div>
       <div class="person2">
-        <p>小林</p><img src=".\photo\Image (5).jfif">
+        <p>小林</p><img src="./photo/Image (5).jfif">
       </div>
       <div class="person2">
-        <p>岩本</p><img src=".\photo\Image (6).jfif">
+        <p>岩本</p><img src="./photo/Image (6).jfif">
       </div>
     </div>
   </div>
