--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="leader">
       <h3>青年部キャプテン</h3>
       <div class="person1">
-        <p>清野 堅</p><img src="./photo/Image.jfif">
+        <p>清野 堅</p><img src="./photo/Image(0).jfif">
       </div>
     </div>
 
